--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,14 +121,15 @@ img {
   }
 }
 
-.cart {
+.cart, .favLink {
   position: relative;
 }
 
+
 .cartCounter {
   position: absolute;
-  right: -21px;
-  top: -10px;
+  right: -5px;
+  top: -15px;
   background: #ff5100;
   color: #fff;
   font-size: 12px;
